--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <meta
+      name="google-site-verification"
+      content="wjd5CVq8HDX7Q2pUoJqqhSQ4HmhNum7RAk6jwwE13ng"
+    />
+
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
